
<resources>
    <string name="app_name">Food Wastage Management</string>
    <string name="food_aid">FOOD AID</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>

    <string name="enter_your_email_address">Enter your e-mail address</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="email_address">Email Address:</string>
    <string name="full_name">Full Name:</string>
    <string name="enter_your_full_name">Enter your full name</string>

    <string name="reset">Reset</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="user">user</string>
    <string-array name="spinner_label">
        <item>Wedding</item>
        <item>Birthday Party</item>
        <item>Graduation party</item>
        <item>Other</item>
    </string-array>

</resources>