<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context=".RegisterUser">


    <EditText
        android:id="@+id/txt_fullName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:textColorHint="@color/white"

        android:ems="10"
        android:hint="@string/enter_your_full_name"

        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="124dp">

    </EditText>

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Enter your email"


        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fullName">

    </EditText>
    <EditText
        android:id="@+id/phone_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_your_phone_number"

        android:inputType="phone"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        app:passwordToggleEnabled="true" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"

        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="enter your password"

        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        app:passwordToggleEnabled="true" />

    <RadioGroup
        android:id="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        android:paddingTop="20dp"
        android:paddingLeft="50dp"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/restaurant"
            android:layout_width="300dp"

            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Restaurant Manager"
            />


        <RadioButton
            android:id="@+id/event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Event Organiser"
            />
        <RadioButton
            android:id="@+id/children"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Children's Home manager"
            />
    </RadioGroup>


    <Button
        android:id="@+id/register"
        android:layout_width="300dp"
        android:layout_height="70dp"


        android:layout_marginTop="24dp"
        android:backgroundTint="#0ED6B9"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        style="?android:attr/progressBarStyleLarge"

        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>